# goodreads

./: .gitignore  pyproject.toml
tests/: test_goodreads.py
